--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -6,7 +6,7 @@
 ###############
 
 # Yaani Browser
-- regex: '(?:Turkcell-)?YaaniBrowser(?:/(\d+[\.\d]+))? Mobile'
+- regex: 'Firefox/.*(?:Turkcell-)?YaaniBrowser(?:/(\d+[\.\d]+))?'
   name: 'Yaani Browser'
   version: '$1'
   engine:
