feat(browser) detect browser: Slimjet Browser

--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -288,6 +288,13 @@
   engine:
     default: 'Blink'
 
+# Slimjet Browser (https://slimjet.com)
+- regex: 'Chrome/.+ Slimjet(?:/(\d+[\.\d]+))?'
+  name: 'Slimjet Browser'
+  version: '$1'
+  engine:
+    default: 'Blink'
+
 # Huawei Browser
 - regex: 'HuaweiBrowser(?:/(\d+[\.\d]+))?'
   name: 'Huawei Browser'
