--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2583,3 +2583,11 @@
     version: 6.1.3
     engine: Gecko
     engine_version: "68.0"
+-
+  user_agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/72.0.3626.121 Safari/537.36 Slimjet/22.0.4.0
+  client:
+    type: browser
+    name: Slimjet Browser
+    version: 22.0.4.0
+    engine: Blink
+    engine_version: ""
