feat(browser) detect browser: MxNitro Browser feat(browser) detect browser: 7Star Browser

--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -288,9 +288,23 @@
   engine:
     default: 'Blink'
 
-# Slimjet Browser (https://slimjet.com)
-- regex: 'Chrome/.+ Slimjet(?:/(\d+[\.\d]+))?'
-  name: 'Slimjet Browser'
+# Slimjet (https://slimjet.com)
+- regex: 'Slimjet/(?:(\d+[\.\d]+))'
+  name: 'Slimjet'
+  version: '$1'
+  engine:
+    default: 'Blink'
+
+# 7Star
+- regex: '7Star/(?:(\d+[\.\d]+))'
+  name: '7Star'
+  version: '$1'
+  engine:
+    default: 'Blink'
+
+# MxNitro
+- regex: 'MxNitro/(?:(\d+[\.\d]+))'
+  name: 'MxNitro'
   version: '$1'
   engine:
     default: 'Blink'
