feat(browser) Internet Explorer YAML Float version translated to string explicitly

--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -1517,22 +1517,22 @@
     default: 'Trident'
 - regex: 'MSIE.*Trident/4.0'
   name: 'Internet Explorer'
-  version: 8.0
+  version: '8.0'
   engine:
     default: 'Trident'
 - regex: 'MSIE.*Trident/5.0'
   name: 'Internet Explorer'
-  version: 9.0
+  version: '9.0'
   engine:
     default: 'Trident'
 - regex: 'MSIE.*Trident/6.0'
   name: 'Internet Explorer'
-  version: 10.0
+  version: '10.0'
   engine:
     default: 'Trident'
 - regex: 'Trident/[78].0'
   name: 'Internet Explorer'
-  version: 11.0
+  version: '11.0'
   engine:
     default: 'Trident'
 - regex: 'MSIE (\d+[\.\d]+)'
