feat(device) detect new brand Tinmo models: A11, K3 feat(device) detect new brand Matrix model: 7116-A5 feat(device) detect brand Coolpad model: 8298-M02 feat(device) detect brand Touchmate models: TM-MID794C, TM-MID795 feat(device) detect brand ArmPhone model: TSD Quadra A0505P
issue #6355

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3639,7 +3639,7 @@ Condor:
 
 # Coolpad
 Coolpad:
-  regex: '(?:YL-)?Coolpad|(?:Cool_9S|8190Q|1831-A0|8676-[AM]01|CP8298_I00|CP3648A|CP8676_I0[23]|REVVLPLUS C3701A|VCR-[AI]0|C105-E0|C106-[79]|MTS-T0|cp3705A[S]?|ORL-C0|DLS-E0)(?:[);/ ]|$)|(8295|5860S) Build'
+  regex: '(?:YL-)?Coolpad|(?:Cool_9S|8190Q|1831-A0|8676-[AM]01|CP8298_I00|CP3648A|CP8676_I0[23]|REVVLPLUS C3701A|VCR-[AI]0|C105-E0|C106-[79]|MTS-T0|cp3705A[S]?|ORL-C0|DLS-E0|8298-M02)(?:[);/ ]|$)|(8295|5860S) Build'
   device: 'smartphone'
   models:
     - regex: 'VCR-[AI]0'
@@ -3675,7 +3675,7 @@ Coolpad:
       model: 'Note 3 Plus'
     - regex: 'CP8298_I00(?:[);/ ]|$)'
       model: 'Note 3 Lite'
-    - regex: '(8676-[AM]01)(?:[);/ ]|$)'
+    - regex: '(8676-[AM]01|8298-M02)(?:[);/ ]|$)'
       model: '$1'
     - regex: '(?:YL-)?Coolpad[ _\-]?([^/;]+) Build'
       model: '$1'
@@ -10804,7 +10804,7 @@ PCD Argentina:
 
 # ArmPhone
 ArmPhone:
-  regex: '(TSD Octa A0520P|TSD Quadra A0509P)(?:[);/ ]|$)'
+  regex: '(TSD Octa A0520P|TSD Quadra A050[59]P)(?:[);/ ]|$)'
   device: 'smartphone'
   model: '$1'
 
@@ -13587,10 +13587,10 @@ Toplux:
 
 # Touchmate
 Touchmate:
-  regex: 'TOUCHMATE|(TM-(?:MID1020A|MID710|MID798|MID792|MID788D|SM500N|SM410))'
+  regex: 'TOUCHMATE|(TM-(?:MID1020A|MID794C|MID795|MID710|MID798|MID792|MID788D|SM500N|SM410))'
   device: 'smartphone'
   models:
-    - regex: '(TM-(?:MID1020A|MID710|MID798|MID792|MID788D))'
+    - regex: '(TM-(?:MID1020A|MID794C|MID795|MID710|MID798|MID792|MID788D))'
       device: 'tablet'
       model: '$1'
     - regex: '(TM-(?:SM500N|SM410))'
@@ -17908,6 +17908,18 @@ Starlight:
 # GEOFOX
 GEOFOX:
   regex: 'GEOFOX[_](MID743)(?:[);/ ]|$)'
+  device: 'tablet'
+  model: '$1'
+
+# Tinmo
+Tinmo:
+  regex: 'TiNMO[- _](A11|K3)(?:[);/ ]|$)'
+  device: 'smartphone'
+  model: '$1'
+
+# Matrix
+Matrix:
+  regex: '(7116-A5)(?:[);/ ]|$)'
   device: 'tablet'
   model: '$1'
 
