feat(device) detect brand iLife model: ITELL K3300 feat(device) detect brand DEXP model: Ixion ML 4.7" feat(device) detect brand Jinga model: Touch 4G feat(device) detect brand Mobicel model: Trendy Plus feat(device) detect brand Blu model: Touchbook M7 Pro feat(device) detect brand Ginzzu models: S5002, S5021, S5230 feat(device) detect brand Sharp model: B10 (SH-A01) feat(device) detect brand Blaupunkt model: SL Plus 02
issue #6355

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2286,7 +2286,7 @@ Bitel:
 
 # Blu
 Blu:
-  regex: 'BLU[ _]|(?:blu|Dash)[ _]([^/;)]+)(?: Build|[;)])|Studio (5.0K|5.5|View XL|Mega|C 8\+8|C HD|C|G|Selfie LTE|Touch|M HD|M5 Plus|J[1258]|X|X8 HD)|Advance (4.0 ?[LM]|5.[02](?: HD)?|A4|L5)|ENERGY (DIAMOND|XL)|LIFE XL|B110DL|Dash (?:X[2L]|L3)|PURE XL|Life One X2|GRAND (?:5.5 HD|XL LTE)|R1 (HD|PLUS)|Tank Xtreme 5.0|Tank Xtreme Pro|STUDIO SELFIE'
+  regex: 'BLU[ _]|(?:blu|Dash)[ _]([^/;)]+)(?: Build|[;)])|Studio (5.0K|5.5|View XL|Mega|C 8\+8|C HD|C|G|Selfie LTE|Touch|M HD|M5 Plus|J[1258]|X|X8 HD)|Advance (4.0 ?[LM]|5.[02](?: HD)?|A4|L5)|ENERGY (DIAMOND|XL)|LIFE XL|B110DL|Dash (?:X[2L]|L3)|PURE XL|Life One X2|GRAND (?:5.5 HD|XL LTE)|R1 (HD|PLUS)|Tank Xtreme 5.0|Tank Xtreme Pro|STUDIO SELFIE|Touchbook M7 Pro'
   device: 'smartphone'
   models:
     - regex: 'Advance (4.0 ?[LM]|4.0|5.[02](?: HD)?|A4|L5)'
@@ -2345,6 +2345,11 @@ Blu:
       model: 'Tank Xtreme Pro'
     - regex: 'VIVO AIR LTE'
       model: 'Vivo Air LTE'
+
+    - regex: 'Touchbook M7 Pro'
+      model: 'Touchbook M7 Pro'
+      device: 'tablet'
+
     - regex: 'DASH[ _]([^/;]+) Build'
       model: 'Dash $1'
     - regex: 'DASH (5.0|L3|L|M|X2|X)'
@@ -2780,7 +2785,7 @@ BenQ:
 
 # Blaupunkt
 Blaupunkt:
-  regex: 'Blaupunkt|Atlantis[_ ](?:1001A|1010A|A10\.G40[23])|Discovery[_ ](?:A10_302|111C|1000C|1001A?)|Endeavour[_ ](?:785|101[GLM]|1000|1001|101[03]|1100)|Polaris[_ ]803'
+  regex: 'Blaupunkt|Atlantis[_ ](?:1001A|1010A|A10\.G40[23])|SLplus02|Discovery[_ ](?:A10_302|111C|1000C|1001A?)|Endeavour[_ ](?:785|101[GLM]|1000|1001|101[03]|1100)|Polaris[_ ]803'
   device: 'tablet'
   models:
     - regex: 'Discovery[_ ]111C'
@@ -2799,6 +2804,8 @@ Blaupunkt:
       model: 'Polaris $1'
     - regex: 'Atlantis[_ ](1001A|1010A|A10\.G40[23])'
       model: 'Atlantis $1'
+    - regex: 'SLplus02'
+      model: 'SL Plus 02'
     - regex: 'Blaupunkt (SL 0[124]|SM 01)'
       device: 'smartphone'
       model: '$1'
@@ -3946,14 +3953,15 @@ Desay:
 
 # DEXP
 DEXP:
-  regex: 'DEXP|(?:Ursus|Ixion)[ _]([^;/)]+)|H135[ _]Build|Larus_TV1|(?:SENIOR|F4[38]D8000K|VA[12]10|VA170|ML450|MS[56]50|BL[12]50|BS155|BS160|BS[1256]50|AL[12]40|AL[23]50|AS155|AS260| (?:N280i|P380i|R110|B450|B340|A1[45]0))(?:[);/ ]|$)'
+  regex: 'DEXP|(?:Ursus|Ixion)[ _]([^;/)]+)|H135[ _]Build|Larus_TV1|IxionML4.7|(?:SENIOR|F4[38]D8000K|VA[12]10|VA170|ML450|MS[56]50|BL[12]50|BS155|BS160|BS[1256]50|AL[12]40|AL[23]50|AS155|AS260| (?:N280i|P380i|R110|B450|B340|A1[45]0))(?:[);/ ]|$)'
   device: 'smartphone'
   models:
-
     - regex: 'Ixion[_ ]([^;/]+)(?: Build|\))'
       model: 'Ixion $1'
     - regex: '(ML450|MS[56]50)(?:[);/ ]|$)'
       model: 'Ixion $1'
+    - regex: 'IxionML4.7(?:[);/ ]|$)'
+      model: 'Ixion ML 4.7"'
     - regex: 'AL250(?:[);/ ]|$)'
       model: '4.5" AL250'
     - regex: 'AL350(?:[);/ ]|$)'
@@ -5451,17 +5459,17 @@ Gigaset:
 
 # Ginzzu
 Ginzzu:
-  regex: 'GINZZU[_ ]|((?:RS(?:7[14]|81|9[67])D)|S50[45]0|S5120|RS(6[12]|9[45])D|S40[23]0|RS850[12]|RS9602)(?:[);/ ]|$)'
+  regex: 'GINZZU[_ ]|((?:RS(?:7[14]|81|9[67])D)|S5002|S5021|S5230|S50[45]0|S5120|RS(6[12]|9[45])D|S40[23]0|RS850[12]|RS9602)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'GINZZU[_ ]?(S40[17]0|S4710|ST60[14]0|ST6120)'
       model: '$1'
-    - regex: 'GINZZU[_ ]?(GT-(?:1050|7105|70[1-4]0|7115|7210|[WX]831|X[78|70|7810|8[01]10|X853))'
+    - regex: 'GINZZU[_ ]?(GT-(?:1050|7105|70[1-4]0|7115|7210|[WX]831|X[78]70|7810|8[01]10|X853))'
       model: '$1'
       device: 'tablet'
     - regex: '(RS6[12]D) ULTIMATE'
       model: '$1 Ultimate'
-    - regex: '(?:GINZZU[ _])?((?:RS(?:7[14]|81|9[4-7])D)|S50[45]0|S5120|S40[23]0|RS850[12]|RS9602|RS94D)(?:[);/ ]|$)'
+    - regex: '(?:GINZZU[ _])?((?:RS(?:7[14]|81|9[4-7])D)|S50[45]0|S5002|S5021|S5230|S5120|S40[23]0|RS850[12]|RS9602|RS94D)(?:[);/ ]|$)'
       model: '$1'
 
 # Gionee
@@ -6592,9 +6600,14 @@ iRola:
 
 # iRulu
 iRulu:
-  regex: 'iRULU[ _](X11|V[34])(?:[);/ ]|$)'
+  regex: 'iRULU[ _](X11|V[34]|U2)(?:[);/ ]|$)'
   device: 'tablet'
-  model: '$1'
+  models:
+    - regex: 'iRULU[ _](X11|V[34])(?:[);/ ]|$)'
+      model: '$1'
+    - regex: 'iRULU[ _](U2)(?:[);/ ]|$)'
+      device: 'smartphone'
+      model: '$1'
 
 # Irbis
 Irbis:
@@ -7228,7 +7241,7 @@ Impression:
 
 #iLife or i-life (lifedigital.com)
 iLife:
-  regex: '(ITELL_K3500N)(?:[);/ ]|$)'
+  regex: '(ITELL[_ ](?:K3300|K3500N))(?:[);/ ]|$)'
   device: 'tablet'
   model: '$1'
 
@@ -9234,11 +9247,13 @@ Mobiola:
 
 # Mobicel
 Mobicel:
-  regex: 'Mobicel_(R1)|Matrix'
+  regex: 'Mobicel_(R1)|Matrix|TRENDY PLUS'
   device: 'smartphone'
   models:
     - regex: 'Matrix'
       model: 'Matrix'
+    - regex: 'TRENDY PLUS'
+      model: 'Trendy Plus'
     - regex: 'Mobicel_(R1)'
       model: '$1'
 
@@ -12930,7 +12945,7 @@ Spice:
 
 # Sharp (jp.sharp)
 Sharp:
-  regex: 'SHARP|SBM|SH-?[0-9]+[a-z]?(?:[);/ ]|$)|AQUOS|(?:SH-M0[45789]|SH-M1[123]|S[357]-SH|SH-[MZ](10|01)|SH-[CL]02|SH-RM(?:1[12]|02)|[34]04SH|[45]02SH|[36]05SH|70[1246]SH|80[138]SH|90[1678]SH|50[3679]SH|SHL22|SHV4[0-8]|SHV3[1-9](?:[-_]u)?|FS80(?:1[08]|32|28|0[29])|TG-L900S|NP601SH|603SH|SHV4[035][-_]u|SW001SH|SHG0[12]|X4-SH|A002SH|DM-01J)(?:[);/ ]|$)'
+  regex: 'SHARP|SBM|SH-?[0-9]+[a-z]?(?:[);/ ]|$)|AQUOS|(?:SH-M0[45789]|SH-M1[123]|S[357]-SH|SH-[MZ](10|01)|SH-[CL]02|SH-RM(?:1[12]|02)|[34]04SH|[45]02SH|[36]05SH|70[1246]SH|80[138]SH|90[1678]SH|50[3679]SH|SHL22|SHV4[0-8]|SHV3[1-9](?:[-_]u)?|FS80(?:1[08]|32|28|0[29])|TG-L900S|NP601SH|603SH|SHV4[035][-_]u|SW001SH|SHG0[12]|X4-SH|A002SH|SH-A01|DM-01J)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -13030,6 +13045,8 @@ Sharp:
       model: 'Aquos U'
     - regex: 'TG-L900S(?:[);/ ]|$)'
       model: 'Luna S'
+    - regex: 'SH-A01(?:[);/ ]|$)'
+      model: 'B10'
     - regex: '(?:FS8002|SHV47)(?:[);/ ]|$)'
       model: 'Z2'
     - regex: 'FS8009(?:[);/ ]|$)'
@@ -17422,7 +17439,7 @@ TurboKids:
 
 # Jinga
 Jinga:
-  regex: 'Jinga[-_ ]|(?:Optim4G|PassPlus|PicassoNote|Hotz[_ ]M1|WinPRO|IGO[ _]L[41])(?:[);/ ]|$)'
+  regex: 'Jinga[-_ ]|(?:Optim4G|PassPlus|PicassoNote|Hotz[_ ]M1|WinPRO|Touch4G|IGO[ _]L[41])(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Optim4G(?:[);/ ]|$)'
@@ -17433,6 +17450,8 @@ Jinga:
       model: 'Pass Plus'
     - regex: 'WinPRO(?:[);/ ]|$)'
       model: 'Win Pro'
+    - regex: 'Touch4G(?:[);/ ]|$)'
+      model: 'Touch 4G'
     - regex: 'PicassoNote(?:[);/ ]|$)'
       model: 'Picasso Note'
     - regex: 'Jinga Iron(?:[);/ ]|$)'
