--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -16731,7 +16731,7 @@ Zfiner:
 
 # iGet
 iGet:
-  regex: 'SMART_(G10[12]|G71|G81[H]?)(?:[);/ ]|$)'
+  regex: 'SMART[_ ](G10[12]|S7[02]|G71|G81[H]?)(?:[);/ ]|$)'
   device: 'tablet'
   model: 'Smart $1'
 
@@ -18031,6 +18031,15 @@ eSTAR:
     - regex: 'eSTAR[_ ]MINI[_ ]3G'
       model: 'Mini 3G'
 
+# Hometech
+Hometech:
+  regex: 'Ideal (?:10S|Tab [79])(?:[);/ ]|$)'
+  device: 'tablet'
+  models:
+    - regex: '(Ideal (?:10S|Tab 9))'
+      model: '$1'
+    - regex: 'Ideal Tab 7 Ips( 3G)?'
+      model: 'Ideal Tab 7 IPS$1'
 
 # Wiseasy (wiseasy.com)
 Wiseasy:
