--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -1181,6 +1181,8 @@ Alcatel:
       model: 'One Touch Fierce 2'
     - regex: '5056[NW]'
       model: 'One Touch Fierce 4'
+    - regex: '5054N'
+      model: 'One Touch Fierce XL'
     - regex: '6042D'
       model: 'One Touch Flash'
     - regex: '6016[AX]'
