feat(browser) detect Crazy Browser
issue #6441

--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2607,3 +2607,11 @@
     version: 1.0.1.3000
     engine: Blink
     engine_version: ""
+-
+  user_agent: Mozilla/5.0 (Windows NT 6.1; WOW64; Trident/7.0; rv:11.0; Crazy Browser 3.1.0) like Gecko
+  client:
+    type: browser
+    name: Crazy Browser
+    version: 3.1.0
+    engine: Trident
+    engine_version: "7.0"
