--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -1525,6 +1525,13 @@
   engine:
     default: '' # multi engine
 
+# Crazy Browser
+- regex: 'Crazy Browser (\d+[\.\d]+)'
+  name: 'Crazy Browser'
+  version: '$1'
+  engine:
+    default: 'Trident'
+
 #Internet Explorer
 - regex: 'IEMobile[ /](\d+[\.\d]+)'
   name: 'IE Mobile'
