feat(device) detect new brand NorthTech model: TouchPad 10.0" (NT-TP10) feat(device) detect brand Odys model: Nova X7 Plus 3G, Nova X7 feat(device) detect brand MyPhone model: MyTab 10 III
issue #6355

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9657,6 +9657,9 @@ MyPhone:
     - regex: 'MyTab[ _]([^;/]+) Build'
       model: 'MyTab $1'
       device: 'tablet'
+    - regex: 'myTab_10III'
+      model: 'MyTab 10 III'
+      device: 'tablet'
     - regex: 'myTab10II'
       model: 'MyTab 10 II'
       device: 'tablet'
@@ -10085,7 +10088,7 @@ O2:
 
 # Odys
 Odys:
-  regex: 'ODYS[ _-]|IEOS[_ ]([^/;]+)|NOON(?:_PRO)? Build|SPACE10_(?:PLUS|PRO)_3G|THOR_?10|TAO_X10|RAPID_?(?:10|7)_?LTE|MAVEN_?10_|CONNECT[78]|ELEMENT10_PLUS_3G|XELIO[_0-9P]|ADM816HC|ADM8000KP|NEO6_LTE|EOS10|AEON|FALCON_10_PLUS_3G|FUSION|THANOS_10|MAVEN_X10_HD(?:_LTE)?|JUNIOR_8_PRO|PYRO_7_PLUS_3G|UNO_X8|SLADE_X55'
+  regex: 'ODYS[ _-]|IEOS[_ ]([^/;]+)|NOON(?:_PRO)? Build|SPACE10_(?:PLUS|PRO)_3G|THOR_?10|TAO_X10|RAPID_?(?:10|7)_?LTE|MAVEN_?10_|CONNECT[78]|ELEMENT10_PLUS_3G|XELIO[_0-9P]|ADM816HC|ADM8000KP|NEO6_LTE|EOS10|AEON|FALCON_10_PLUS_3G|FUSION|THANOS_10|MAVEN_X10_HD(?:_LTE)?|JUNIOR_8_PRO|(?:NOVA|PYRO)_X?7_PLUS_3G|UNO_X8|SLADE_X55'
   device: 'tablet'
   models:
     - regex: 'XELIO[_ ]A10'
@@ -10150,6 +10153,10 @@ Odys:
       model: 'Titan'
     - regex: 'PYRO_7_PLUS_3G'
       model: 'Pyro 7 Plus 3G'
+    - regex: 'NOVA_X7_PLUS_3G'
+      model: 'Nova X7 Plus 3G'
+    - regex: 'ODYS_NOVA_X7'
+      model: 'Nova X7'
     - regex: 'THOR_?10_PLUS_3G'
       model: 'Thor 10 Plus 3G'
 
@@ -18102,6 +18109,11 @@ Navitech:
   device: 'tablet'
   model: '$1 $2'
 
+# NorthTech (north-tech.us)
+NorthTech:
+  regex: '(NT-TP10)(?:[);/ ]|$)'
+  device: 'tablet'
+  model: 'TouchPad 10.0"'
 
 # Wiseasy (wiseasy.com)
 Wiseasy:
